gitops/clusters/homelab/apps/postgres/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    app.kubernetes.io/managed-by: flux
